--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,11 @@ resources/macOS/
 !.config/i3
 !.config/i3/**
 
+# Track IPython config.
+!.ipython
+!.ipython/profile_default
+!.ipython/profile_default/ipython_config.py
+
 
 # Track locally installed fonts.
 !.local/share/fonts/**
