--- a/.config/i3/config
+++ b/.config/i3/config
@@ -158,7 +158,7 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-bindsym $mod+x exec betterlockscreen --lock
+bindsym $mod+x exec i3lock --no-unlock-indicator --color=1d2021
 
 
 # Pulse Audio controls
