--- a/.httpie/config.json
+++ b/.httpie/config.json
@@ -4,5 +4,5 @@
         "help": "https://httpie.org/docs#config",
         "httpie": "0.9.8"
     },
-    "default_options": ["--style=fruity"]
+    "default_options": ["--style=fruity", "--default-scheme=https"]
 }
