--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -39,6 +39,7 @@
 	diffFilter = diff-highlight
 [init]
 	templatedir = ~/.git_template
+	defaultBranch = main
 [includeIf "gitdir:~/Developer/mollybet/"]
 	path = ~/.gitconfig_molly
 [pull]
