don't force https in httpie: use https command alias instead

--- a/misc/.config/httpie/config.json
+++ b/misc/.config/httpie/config.json
@@ -1,6 +1,5 @@
 {
     "default_options": [
-        "--style=gruvbox-dark",
-        "--default-scheme=https"
+        "--style=gruvbox-dark"
     ]
 }
