refactor(xmonad): make loadkeys callable after login

--- a/xmonad/.xsessionrc
+++ b/xmonad/.xsessionrc
@@ -33,11 +33,9 @@ fi
 
 
 # Put Jeo on Kinesis.
-xinput --list \
-    | grep Kinesis \
-    | grep -Ev 'Control|pointer' \
-    | grep -Po '(?<=id=)[0-9]+'  \
-    | xargs -I device_id xkbcomp -i device_id ~/.config/xkb/keymap.xkm "$DISPLAY"
+if which loadkeys &> /dev/null; then
+    loadkeys
+fi
 
 
 exec xmonad
