--- a/misc/.config/helix/themes/everforest_light_medium.toml
+++ b/misc/.config/helix/themes/everforest_light_medium.toml
@@ -53,7 +53,8 @@
 "ui.cursor.select" = { fg = "bg0", bg = "blue" }
 "ui.cursorline.primary" = { bg = "bg1" }
 "ui.cursorline.secondary" = { bg = "bg1" }
-"ui.selection" = { bg = "bg3" }
+"ui.selection" = { bg = "bg2" }
+"ui.selection.primary" = { bg = "bg3" }
 "ui.linenr" = "grey0"
 "ui.linenr.selected" = "fg"
 "ui.statusline" = { fg = "grey2", bg = "bg3" }
