--- a/xmonad/.xmobarrc
+++ b/xmonad/.xmobarrc
@@ -1,6 +1,6 @@
 Config { overrideRedirect = False
-       , font     = "xft:Source Code Pro for Powerline-9"
-       , additionalFonts = [ "xft:Source Code Pro for Powerline-9:style=bold"
+       , font     = "Source Code Pro for Powerline Medium 10"
+       , additionalFonts = [ "Source Code Pro for Powerline Semibold 10"
                            ]
        , bgColor  = "#343f44"
        , fgColor  = "#859289"
