--- a/misc/.config/starship.toml
+++ b/misc/.config/starship.toml
@@ -1,3 +1,9 @@
+[aws]
+disabled = true
+
+[cmake]
+disabled = true
+
 [git_status]
 conflicted = '!'
 ahead = '>'
@@ -5,3 +11,6 @@ behind = '<'
 diverged = '<>'
 untracked = '%'
 modified = '*'
+
+[python]
+symbol = ' '
