fix(picom): don't render bounding box on toolips etc

--- a/xmonad/.config/picom/picom.conf
+++ b/xmonad/.config/picom/picom.conf
@@ -18,4 +18,24 @@ experimental-backends = true;
 backend = "glx";
 
 corner-radius = 6;
-rounded-corners-exclude = ["name = 'xmobar'"]
+rounded-corners-exclude = [
+    "name = 'xmobar'",
+    "window_type = 'menu'",
+    "window_type = 'dropdown_menu'",
+    "window_type = 'popup_menu'",
+    "window_type = 'tooltip'"
+];
+
+blur-background-exclude = [
+    "window_type = 'menu'",
+    "window_type = 'dropdown_menu'",
+    "window_type = 'popup_menu'",
+    "window_type = 'tooltip'"
+];
+
+shadow-exclude = [
+    "window_type = 'menu'",
+    "window_type = 'dropdown_menu'",
+    "window_type = 'popup_menu'",
+    "window_type = 'tooltip'"
+];
