--- a/misc/.config/alacritty/alacritty.toml
+++ b/misc/.config/alacritty/alacritty.toml
@@ -1,26 +1,26 @@
 [colors.bright]
-black = "#475258"
-blue = "#7fbbb3"
-cyan = "#83c092"
-green = "#a7c080"
-magenta = "#d699b6"
-red = "#e67e80"
-white = "#d3c6aa"
-yellow = "#dbbc7f"
+black = "#5c6a72"
+blue = "#3a94c5"
+cyan = "#35a77c"
+green = "#8da101"
+magenta = "#df69ba"
+red = "#f85552"
+white = "#e0dcc7"
+yellow = "#dfa000"
 
 [colors.normal]
-black = "#475258"
-blue = "#7fbbb3"
-cyan = "#83c092"
-green = "#a7c080"
-magenta = "#d699b6"
-red = "#e67e80"
-white = "#d3c6aa"
-yellow = "#dbbc7f"
+black = "#5c6a72"
+blue = "#3a94c5"
+cyan = "#35a77c"
+green = "#8da101"
+magenta = "#df69ba"
+red = "#f85552"
+white = "#e0dcc7"
+yellow = "#dfa000"
 
 [colors.primary]
-background = "#2d353b"
-foreground = "#d3c6aa"
+background = "#fdf6e3"
+foreground = "#5c6a72"
 
 [font]
  size =  9   # xmonad (external)
@@ -47,8 +47,8 @@ style = "Regular"
 y = 0
 
 [window]
- opacity = 0.7  # xmonad
-#opacity = 1.0  # unity
+ opacity = 0.85  # xmonad
+#opacity = 1.0   # unity
 
 [window.dimensions]
 columns = 120
