--- a/xmonad/.xmobarrc
+++ b/xmonad/.xmobarrc
@@ -2,19 +2,19 @@ Config { overrideRedirect = False
        , font     = "SauceCodePro Nerd Font Medium 10"
        , additionalFonts = [ "SauceCodePro NerdFont SemiBold 10"
                            ]
-       , bgColor  = "#3a515d"
-       , fgColor  = "#859289"
-       , alpha = 72
+       , bgColor  = "#fdf6e3"
+       , fgColor  = "#829181"
+       , alpha = 216
        -- , position = BottomW L 90
        , position = BottomH 23
        , commands = [ Run Weather "EGWU"
-                        [ "--template", "<weather> <fn=1><fc=#d3c6aa><tempC>°C</fc></fn>"
+                        [ "--template", "<weather> <fn=1><fc=#5c6a72><tempC>°C</fc></fn>"
                         ] 9000
                     , Run Cpu [ "--template", "Cpu <total>%"
                               , "--ppad", "2"
                               ] 10
                     , Run Alsa "default" "Master"
-                        [ "--template", "<fn=1><fc=#d3c6aa><volumestatus></fc></fn>"
+                        [ "--template", "<fn=1><fc=#5c6a72><volumestatus></fc></fn>"
                         , "--suffix"  , "True"
                         , "--"
                         , "--on", ""
@@ -22,7 +22,7 @@ Config { overrideRedirect = False
                     , Run Memory [ "--template", "Mem <usedratio>%"
                                  , "--ppad", "2"
                                  ] 10
-                    , Run Date "%a %Y-%m-%d <fn=1><fc=#d3c6aa>%H:%M</fc></fn>" "date" 10
+                    , Run Date "%a %Y-%m-%d <fn=1><fc=#5c6a72>%H:%M</fc></fn>" "date" 10
                     , Run XMonadLog
                     ]
        , template = "%XMonadLog% }{ %alsa:default:Master% | %cpu% | %memory% | %EGWU% | %date% "
